--- a/scss/style.scss
+++ b/scss/style.scss
@@ -274,6 +274,7 @@ section.slide.image{
 section.slide div.slide-inner{
 	margin: auto;
 	padding-top: 40px;
+	padding-bottom: 40px;
 	
 	@include breakpoint(desktop){
 		width: $media-small-desktop;
